--- a/src/App.css
+++ b/src/App.css
@@ -38,6 +38,16 @@
   margin-bottom: 10px;
 }
 
+.success {
+  color: green;
+  background: lightgreen;
+  font-size: 20px;
+  border-style: solid;
+  border-radius: 5px;
+  padding: 10px;
+  margin-bottom: 10px;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
